--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ body{
 .Login input:nth-child(6) {
     background-color: #53678b;
     color: white;
+    cursor: pointer;
 
     width: 75%;
     height: 40px;
@@ -121,6 +122,7 @@ body{
 .Sign-in input:nth-child(5) {
     background-color: #53678b;
     color: white;
+    cursor: pointer;
 
     width: 75%;
     height: 40px;
